module 01 ex03 now working

--- a/module_1/ex03/Makefile
+++ b/module_1/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: casimirri <clundber@student.hive.fi>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/12 14:11:27 by clundber          #+#    #+#              #
-#    Updated: 2024/07/31 15:17:15 by casimirri        ###   ########.fr        #
+#    Updated: 2024/07/31 21:02:38 by casimirri        ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,12 +16,10 @@ COLOUR_BLUE=\033[0;34m
 COLOUR_END=\033[0m
 
 # ------------ PROJECT -------#
-NAME = horde
+NAME = violence
 
 #------------- SOURCE FILES ------#
-CFILES = main.cpp Zombie.cpp zombieHorde.cpp
-
-HFILES := -I Zombie.hpp
+CFILES = main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
 
 OFILES = $(CFILES:.cpp=.o)
 
@@ -38,7 +36,7 @@ all: $(NAME)
 
 $(NAME): $(OFILES)
 	@echo "$(COLOUR_BLUE)compiling $(NAME)$(COLOUR_END)"
-	@$(CC) $(CFLAGS) $(OFILES) $(HFILES) -o $(NAME) 
+	@$(CC) $(CFLAGS) $(OFILES) -o $(NAME) 
 	@echo "$(COLOUR_GREEN)$(NAME) compiled successfully$(COLOUR_END)"
 
 clean:
